--- a/style.css
+++ b/style.css
@@ -116,6 +116,7 @@ footer img {
 @media screen and (max-width:1199px){
   .client{
     max-width: 50%;
+    /* max-height: 50%; */
     min-width: 20vw; /* vw 20/100 dostępnej szerokości viewportu */
   }
 }
