--- a/css/fixed.css
+++ b/css/fixed.css
@@ -95,8 +95,8 @@ margin-right: 0px!important;
 
 /* landing */
 .home-inner{
-  background-image: url(../img/computers.png);
-  background-size: contain;
+  background-image: url(../img/Hello-Spring.png);
+  background-size: 160%;
 }
 
 .caption{
