--- a/style.css
+++ b/style.css
@@ -59,8 +59,8 @@
 
 /* landing */
 .home-inner{
-  background-image: url(img/computers.png);
-  background-size: contain;
+  background-image: url(img/Hello-Spring.png);
+  background-size: 160%;
 }
 
 .caption{
